--- a/index.html
+++ b/index.html
@@ -14,7 +14,42 @@
 </head>
 
 <body class="container">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, magnam. Nisi illum est ratione maxime enim quasi placeat. Provident, maxime nisi delectus deleniti incidunt inventore nostrum. Placeat perspiciatis beatae sit.
+
+    <div class="sidebar">
+        sidebar
+    </div>
+
+    <header class="header">
+        Header
+    </header>
+
+    <div class="realtors">
+        Top realtors
+    </div>
+
+    <section class="features">
+        Features
+    </section>
+
+    <div class="story__pictures">
+        story pictures
+    </div>
+
+    <div class="story__content">
+        story content
+    </div>
+
+    <section class="homes">
+        Homes
+    </section>
+
+    <section class="gallery">
+        Gallery
+    </section>
+
+    <footer class="footer">
+        Footer
+    </footer>
 </body>
 
 </html>
