--- a/index.html
+++ b/index.html
@@ -355,7 +355,17 @@
     </section>
 
     <footer class="footer">
-        Footer
+        <ul class="nav">
+            <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Download home planner</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Come work for us</a></li>
+        </ul>
+        <p class="copyright">
+            &copy; Copyright 2017 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio rem praesentium ipsa quisquam sunt inventore harum! Quam commodi blanditiis eum fugit deserunt, eius, aut iste unde magnam doloremque corrupti veniam!
+        </p>
     </footer>
 </body>
 
