Add media queries

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         </div>
     </header>
 
+
+    <!-- BEGIN REALTORS -->
     <div class="realtors">
         <h3 class="heading-3">Top 3 Realtors</h3>
         <div class="realtors__list">
